adding pathway description report

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -106,7 +106,6 @@
     "## 3. Selection and assessment of existing GSM (<500 words)\n",
     "\n",
     "For _Pichia Pastoris_, three GEM models were published between 2010-2012 which became the most complete and acknowledged models in literature at the time (Tomàs-Gamisans, 2016). We found all three, imported them through COBRA and ran tests on MEMOTE to check their quality. The memote reports can be found [here](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/tree/main/reports).\n",
-    "<center>\n",
     "\n",
     "|                            | PpaMBEL1254 | iPP668 | iLC915 |\n",
     "|----------------------------|-------------|--------|--------|\n",
@@ -115,7 +114,6 @@
     "| __Number of compartments__ | 1           | 8      | 8      |\n",
     "| __Memote overall score__   | 19%         | 20%    | 27%    |\n",
     "\n",
-    "</center>\n",
     "\n",
     "There has since been improvements and reconstructions of these three models. Among others was on update from 2016 for more accurate predictions to native and humanized glycosylation of recombinant proteins(Irani, 2015). Here, the number of metabolites and reactions were increased to 1443 and 1595 respectively and mass balance was improved with 19.7% (cf. memote reports). In 2016 the three models were also merged together, to form the model iMT1026 (Tomàs-Gamisans, 2016). This model was later improved for better predictions of growth on methanol (Tomàs-Gamisans, 2017) iMT1026.V3 which is relevant for our case study. The reconstruction tools CarveMe and KBase was also experimented with. While CarveMe yields impressive memote results, including correct annotation that iMT1026 lacks, it produces a model with only three compartments which is not representative for a fungal organism such as P. Pastoris. After a lot of effort, Kbase was successfully used to create a fungal model from the K. phaffii refseq from NCBI. The memote results were however not very promising. A script was set up to test if the two models predicted growth on the minimal medium proposed in (Tomàs-Gamisans, 2017) with methanol as sole carbon source. It was not possible for either. Collecting the non-carbon medium components necessary for growth and adding that to the base medium, allowed the CarveMe model to have small but positive growth rates while the Kbase model still could not utilize methanol. Finally, iMT1026.V3 was selected for our project as it represents some of the most recent advancement in the P. pastoris reconstruction field and has been validated experimentally for growth on methanol. It, hopefully, implies that the mechanisms of the central metabolism have been accurately replicated. The introduction of malonate producing pathways mostly relies on this metabolic regime being representative, since the reactions do not branch far away from the central metabolism. The model only gets an overall memote score of 19%, but this is due to missing annotation and charge balancing. It has 100% metabolite connectivity and 90.6% mass balancing and should be able to produce reliable predictions to some extent. A concern however arises from the missing charge balance, causing errors in the non-growth associated maintenance reaction. It is known that maintenance becomes more relevant for low growth rates in fermentation and genetically engineered P. pastoris growing on methanol is expected to be quite slow. Hopefully, this will not influence the results too much but should nonetheless be kept in mind."
    ]
@@ -131,14 +129,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Add heterologous pathway to GSM"
+    "### 4.1 Add heterologous pathway to GSM"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the literature there are 4 possibilities to create malonic acid from methanol. These pathways are added using the script [create_pathway](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/create_pathway.ipynb). "
+    "Borodina et al. describe 4 different pathways to get to 3-hydroxy propionic acid with *Komatogaella phaffii*, where most of them go through malonic semialdehyde (Borodina 2014). This metabolite can serve as a precursor for both, malonic acid and 3-hydroxy propionic acid and therfore these pathways serve as a starting point for this cell factory project (CITATION KEGG??). The described routes and the included are:\n",
+    "- Beta-Alanine\n",
+    "- Malonyl-CoA\n",
+    "- Lactate\n",
+    "- Glycerol\n",
+    "  \n",
+    "The pathways are established in the model by inserting one or several new enzyms and deleting competing ones that draw from the pathway.\n",
+    "###### Beta-Alanine\n",
+    "For this pathway two steps are necessary, first beta-alanine is changed int malonate semialdehyde by transferring its amino group onto alpha-ketoglutaric acid. For this reaction beta-alanine-oxoglutarate aminotransferase is need, which is already implemented in the used model.  \n",
+    "For the second step the enzym malonate-semialdehyde dehydrogenase is used, which hydrolises the malonate semialdehyde to malonic acid and uses NADP+ as a cofactor.\n",
+    "###### Malonyl-CoA\n",
+    "For malonyl-coa as a precursor, two pathways were identified and both are implemented. The first one directly switches the malonic acid group with an acetate molecule to create malonic acid and acetyl-coa. It uses  \t\n",
+    "Acetyl-CoA:malonate CoA-transferase.  \n",
+    "  \n",
+    "The second option is a two step process, where malonyl-coa is split into malonate semialdehyde and co-enzym A while using NADPH through 3-oxopropanoate:NADP+ oxidoreductase (CoA-malonylating). Afterwards the same enzym as in the beta-alanine pathway is used to produce malonic acid. In order to force the model to work through this pathway, the enzym beta-alanine-oxoglutarate aminotransferase has to be shut down, which is described in the beta-alanine pathway as well.  \n",
+    "###### Lactate\n",
+    "In order to produce malonic acid through lactate several enzyms have to be included. Initially lactate is transfered onto co-enzym A, followed by several hydratase steps leading up to 3Hydroxypropyionyl-CoA. From here it is fragmented into 3HP and CoA, where 3HP will be transformed to malonate semialdehyde and finally to malonic acid. The included enzyms are consecutively propionate CoA-transferase, lactoyl-CoA dehydratase, 3-Hydroxypropionyl-CoA hydro-lyase, 3-hydroxyisobutyryl-CoA hydrolase, 3-hydroxypropanoate:NAD+ oxidoreductase and finally and 3-hydroxypropionyl-CoA:NADP+ oxidoreductase.\n",
+    "\n",
+    "###### Glycerol\n",
+    "The glycerol route was dropped because it needs B12 as a cofactor, which is not natural in *K. phaffii*.  \n",
+    "\n",
+    "\n",
+    "These pathways are added using the script [create_pathway](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/create_pathway.ipynb). "
    ]
   },
   {
@@ -153,7 +173,7 @@
     "from cobra import Reaction, Metabolite\n",
     "import pandas as pd\n",
     "model = read_sbml_model('src/models/gen/iMT1026-v3.1.xml')\n",
-    "%run -i scripts/create_pathway.ipynb  # runs other script with included function to alter model"
+    "%run -i scripts/create_pathway.ipynb  # runs other script with included function to alter model by including pathways"
    ]
   },
   {
@@ -182,10 +202,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Reaction identifier</strong></td><td>APAT2r</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Name</strong></td><td>beta-alanine:2-oxoglutarate aminotransferase</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>0x024a225c0898</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Stoichiometry</strong></td>\n",
+       "                <td>\n",
+       "                    <p style='text-align:right'>akg_c + ala_B_c --> glu_L_c + msa_c</p>\n",
+       "                    <p style='text-align:right'>2-Oxoglutarate + beta-Alanine --> L-Glutamate + 3-Oxopropanoate</p>\n",
+       "                </td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>GPR</strong></td><td>PAS_chr2-1_0107 or PAS_chr4_0677</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Lower bound</strong></td><td>0.0</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
+       "            </tr>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<Reaction APAT2r at 0x24a225c0898>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.reactions.APAT2r"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defining the medium\n",
+    "### 4.2 Analyzing the pathways"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.2.1 Defining the medium\n",
     "  \n",
     "*TEXTEEXT*"
    ]
@@ -297,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Theoretical maximum yields\n",
+    "#### 4.2.2 Theoretical maximum yields\n",
     "A phenotypic phaseplane is constructed to see the interconnections between the malonic acid production and the biomass growth rate."
    ]
   },
@@ -436,14 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Phenotypic phase planes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Evaluating optimal O2 uptake"
+    "#### 4.2.3 Optimal O2 uptake"
    ]
   },
   {
@@ -451,21 +517,27 @@
    "metadata": {},
    "source": [
     "Only the promising models are further analysed\n",
-    "![Komagataella phaffii](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/komagataella_phaffii.png?token=AFITQ5UF4AFCE7NLBJHUK7TBUJ2XS \"Komagataella phaffii\")\n"
+    "![O2 uptake table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake_table.PNG \"O2 uptake table\")\n",
+    "\n",
+    "\n",
+    "![O2 uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake.png \"O2 uptake graph\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Malonic acid production"
+    "#### 4.2.4 Optimal methanol uptake rate"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Biomass Growth"
+    "![MeOH uptake table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/meoh_uptake_table.PNG \"MeOH uptake table\")\n",
+    "\n",
+    "\n",
+    "![MeOH uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/meoh_uptake.png \"MeOH uptake graph\")"
    ]
   },
   {
@@ -480,7 +552,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optimization"
+    "### 4.3 Further medium investigation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3.1 Minimal media"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "![Minimal medium table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/min_med_table.PNG \"Minimal medium table\")\n",
+    "\n",
+    "\n",
+    "![Minimal medium graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/minimal_medium.png \"Minimal medium graph\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3.2 Other carbon sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Substrates bargraph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/substrates_bargraph.png \"Substrates bargraph\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.4 Optimization"
    ]
   },
   {
