Add figure numbers

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -56,9 +56,13 @@
     "#### 1.2.1 Introduction to Komagataella phaffii\n",
     "The organism chosen as a cell chassis in this report is the methylotrophic yeast _Komagataella phaffii_, also know under its outdated name _Pichia Pastoris_, which is still often used in applied sciences. The genus _Komagataella_ comprises of 7 species, of which _K. phaffii_ and _K. pastoris_ are most used and only ones that have been studied in detail. (Heistinger 2020).\n",
     "\n",
+    "<center>\n",
+    "\n",
     "![Komagataella phaffii](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/komagataella_phaffii.png?token=AFITQ5UF4AFCE7NLBJHUK7TBUJ2XS \"Komagataella phaffii\")\n",
     "\n",
-    "*K phaffii*: Source: https://www.hcp-detection.org/expression-systems-for-therapeutic-biopharmaceuticals/expression-system-pichia-pastoris/#prettyPhoto/0/"
+    "*Figure 2*: *K. phaffii* Source: https://www.hcp-detection.org/expression-systems-for-therapeutic-biopharmaceuticals/expression-system-pichia-pastoris/#prettyPhoto/0/\n",
+    "\n",
+    "</center>"
    ]
   },
   {
@@ -106,6 +110,8 @@
     "## 3. Selection and assessment of existing GSM (<500 words)\n",
     "\n",
     "For _Pichia Pastoris_, three GEM models were published between 2010-2012 which became the most complete and acknowledged models in literature at the time (Tomàs-Gamisans, 2016). We found all three, imported them through COBRA and ran tests on MEMOTE to check their quality. The memote reports can be found [here](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/tree/main/reports).\n",
+    "\n",
+    "*Table 1*: \n",
     "\n",
     "|                            | PpaMBEL1254 | iPP668 | iLC915 |\n",
     "|----------------------------|-------------|--------|--------|\n",
@@ -516,11 +522,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Only the promising models are further analysed\n",
+    "<center>\n",
+    "\n",
     "![O2 uptake table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake_table.PNG \"O2 uptake table\")\n",
     "\n",
+    "*Figure 3*:\n",
     "\n",
-    "![O2 uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake.png \"O2 uptake graph\")\n"
+    "![O2 uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake.png \"O2 uptake graph\")\n",
+    "\n",
+    "*Figure 4*:\n",
+    "\n",
+    "</center>"
    ]
   },
   {
@@ -534,10 +546,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<center>\n",
+    "\n",
     "![MeOH uptake table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/meoh_uptake_table.PNG \"MeOH uptake table\")\n",
     "\n",
+    "*Figure 5*:\n",
     "\n",
-    "![MeOH uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/meoh_uptake.png \"MeOH uptake graph\")"
+    "![MeOH uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/meoh_uptake.png \"MeOH uptake graph\")\n",
+    "\n",
+    "*Figure 6*:\n",
+    "\n",
+    "</center>"
    ]
   },
   {
@@ -566,17 +585,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "![Minimal medium table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/min_med_table.PNG \"Minimal medium table\")\n",
-    "\n",
-    "\n",
-    "![Minimal medium graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/minimal_medium.png \"Minimal medium graph\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 4.3.2 Other carbon sources"
    ]
   },
@@ -584,7 +592,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Substrates bargraph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/substrates_bargraph.png \"Substrates bargraph\")"
+    "<center>\n",
+    "\n",
+    "![Substrates bargraph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/substrates_bargraph.png \"Substrates bargraph\")\n",
+    "\n",
+    "*Figure 7*:\n",
+    "\n",
+    "</center>"
    ]
   },
   {
@@ -685,10 +699,13 @@
     "\n",
     "Both OptKnock and OptCouple encountered an error which could not be resolved. OptGene did not return any gene targets for gene knock-ins. As the final step in malonic acid production reduces NADP+ to NADPH, we suspect the overproduction of malonic acid has a drastic effect on cofactor balance. Unfortunately OptSwap did not return any gene targets for altered cofactor specificity, either with or without enforced flux towards malonic acid production. In an attempt to manually optimize cofactor usage the specificity of glyceraldehyde-3-phsophate dehydrogenase was changed from NAD(H) to NADP(H), which resulted in a slight increase in flux towards biomass accumulation. With methanol as a substrate FSEOF resulted in 53 reactions with a flux change over 0.01 (figure 1). All of the reactions involved in carbon metabolism as well as reactions directly towards the beta-alanine metabolism have increased fluxes, acetyl-CoA is produced from acetyl instead of pyruvate, the amino acid metabolism stops entirely and the cell starts to metabolize amino acids to maintain ATP requirements. \n",
     "\n",
+    "<center>\n",
     "\n",
-    " ![image.png](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/FSEOF.png)\n",
+    "![image.png](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/FSEOF.png)\n",
     " \n",
-    "Figure 1: Reactions with > 0.01 change in flux a forced objective flux towards malonic acid production ranging form 0.18 to 1.8. "
+    "*Figure 8*: Reactions with > 0.01 change in flux with a forced objective flux towards malonic acid production ranging form 0.18 to 1.8.\n",
+    "\n",
+    "</center>"
    ]
   },
   {
@@ -800,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
