Fix figure center

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -528,6 +528,9 @@
     "\n",
     "*Figure 3*:\n",
     "\n",
+    "</center>\n",
+    "<center>\n",
+    "\n",
     "![O2 uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake.png \"O2 uptake graph\")\n",
     "\n",
     "*Figure 4*:\n",
@@ -551,6 +554,9 @@
     "![MeOH uptake table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/meoh_uptake_table.PNG \"MeOH uptake table\")\n",
     "\n",
     "*Figure 5*:\n",
+    "\n",
+    "</center>\n",
+    "<center>\n",
     "\n",
     "![MeOH uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/meoh_uptake.png \"MeOH uptake graph\")\n",
     "\n",
