--- a/Report.ipynb
+++ b/Report.ipynb
@@ -27,13 +27,11 @@
    "source": [
     "The natural occurring substance malonic acid was first discovered in beetroots. Even though is was first prepared in 1858 (Encyclopædia Britannica), its relevance in todays market is not declining. Malonic acid is traditionally produced synthetically from nonrenewable petroleum feedstock. During this process ester groups have to be added using an alcohol (Hildbrand, 2001). Using non renewable resources is neither environmentally friendly, nor will it be financially lucrative in the future. The company Lygos Inc. has therefore developed a patented method to produce malonic acid through fermentation of genetically modified *Pichia Kudriavzevii* yeast cells (Peters, 2018). These efforts have been taken on due to the vast amount of uses for malonic acid in modern industry.\n",
     "\n",
-    "<center>\n",
     "\n",
     "![Malonic acid](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/malonic_acid.png?token=AFITQ5WD4ATJULL32TF6LELBUJ3AU \"Malonic acid\")\n",
     "\n",
     "*Figure 1*:  Molecular Structure of Malonic Acid.\n",
     "\n",
-    "</center>\n",
     "\n",
     "#### Use of malonic acid\n",
     "\n",
@@ -56,13 +54,10 @@
     "#### 1.2.1 Introduction to Komagataella phaffii\n",
     "The organism chosen as a cell chassis in this report is the methylotrophic yeast _Komagataella phaffii_, also know under its outdated name _Pichia Pastoris_, which is still often used in applied sciences. The genus _Komagataella_ comprises of 7 species, of which _K. phaffii_ and _K. pastoris_ are most used and only ones that have been studied in detail. (Heistinger 2020).\n",
     "\n",
-    "<center>\n",
     "\n",
     "![Komagataella phaffii](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/komagataella_phaffii.png?token=AFITQ5UF4AFCE7NLBJHUK7TBUJ2XS \"Komagataella phaffii\")\n",
     "\n",
-    "*Figure 2*: *K. phaffii* Source: https://www.hcp-detection.org/expression-systems-for-therapeutic-biopharmaceuticals/expression-system-pichia-pastoris/#prettyPhoto/0/\n",
-    "\n",
-    "</center>"
+    "*Figure 2*: *K. phaffii* Source: https://www.hcp-detection.org/expression-systems-for-therapeutic-biopharmaceuticals/expression-system-pichia-pastoris/#prettyPhoto/0/\n"
    ]
   },
   {
@@ -522,20 +517,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center>\n",
-    "\n",
     "![O2 uptake table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake_table.PNG \"O2 uptake table\")\n",
     "\n",
     "*Figure 3*:\n",
     "\n",
-    "</center>\n",
-    "<center>\n",
-    "\n",
     "![O2 uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake.png \"O2 uptake graph\")\n",
     "\n",
-    "*Figure 4*:\n",
-    "\n",
-    "</center>"
+    "*Figure 4*:"
    ]
   },
   {
@@ -549,20 +537,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center>\n",
-    "\n",
     "![MeOH uptake table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/meoh_uptake_table.PNG \"MeOH uptake table\")\n",
     "\n",
     "*Figure 5*:\n",
     "\n",
-    "</center>\n",
-    "<center>\n",
     "\n",
     "![MeOH uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/meoh_uptake.png \"MeOH uptake graph\")\n",
     "\n",
-    "*Figure 6*:\n",
-    "\n",
-    "</center>"
+    "*Figure 6*:\n"
    ]
   },
   {
@@ -598,13 +580,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center>\n",
     "\n",
     "![Substrates bargraph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/substrates_bargraph.png \"Substrates bargraph\")\n",
     "\n",
-    "*Figure 7*:\n",
-    "\n",
-    "</center>"
+    "*Figure 7*:\n"
    ]
   },
   {
@@ -705,13 +684,10 @@
     "\n",
     "Both OptKnock and OptCouple encountered an error which could not be resolved. OptGene did not return any gene targets for gene knock-ins. As the final step in malonic acid production reduces NADP+ to NADPH, we suspect the overproduction of malonic acid has a drastic effect on cofactor balance. Unfortunately OptSwap did not return any gene targets for altered cofactor specificity, either with or without enforced flux towards malonic acid production. In an attempt to manually optimize cofactor usage the specificity of glyceraldehyde-3-phsophate dehydrogenase was changed from NAD(H) to NADP(H), which resulted in a slight increase in flux towards biomass accumulation. With methanol as a substrate FSEOF resulted in 53 reactions with a flux change over 0.01 (figure 1). All of the reactions involved in carbon metabolism as well as reactions directly towards the beta-alanine metabolism have increased fluxes, acetyl-CoA is produced from acetyl instead of pyruvate, the amino acid metabolism stops entirely and the cell starts to metabolize amino acids to maintain ATP requirements. \n",
     "\n",
-    "<center>\n",
     "\n",
     "![image.png](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/FSEOF.png)\n",
     " \n",
-    "*Figure 8*: Reactions with > 0.01 change in flux with a forced objective flux towards malonic acid production ranging form 0.18 to 1.8.\n",
-    "\n",
-    "</center>"
+    "*Figure 8*: Reactions with > 0.01 change in flux with a forced objective flux towards malonic acid production ranging form 0.18 to 1.8.\n"
    ]
   },
   {
