Add correct escher image report

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -637,7 +637,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Substrates bargraph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/substrates_bargraph.png \"Substrates bargraph\")"
+    "![Escher plot](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/4a9df0d9b9168bbb670f017c3f1298cf69e7ba56/img/saved_map.svg \"Escher plot\")"
    ]
   },
   {
