update pathway subheadings

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -143,16 +143,16 @@
     "- Glycerol\n",
     "  \n",
     "The pathways are established in the model by inserting one or several new enzyms and deleting competing ones that draw from the pathway.\n",
-    "##### Beta-Alanine\n",
+    "#### Beta-Alanine\n",
     "For this pathway two steps are necessary, first beta-alanine is changed int malonate semialdehyde by transferring its amino group onto alpha-ketoglutaric acid. For this reaction beta-alanine-oxoglutarate aminotransferase is need, which is already implemented in the used model.  \n",
     "For the second step the enzym malonate-semialdehyde dehydrogenase is used, which hydrolises the malonate semialdehyde to malonic acid and uses NADP+ as a cofactor.\n",
-    "##### Malonyl-CoA\n",
+    "#### Malonyl-CoA\n",
     "For malonyl-coa as a precursor, two pathways were identified and both are implemented. The first one directly switches the malonic acid group with an acetate molecule to create malonic acid and acetyl-coa. It uses Acetyl-CoA:malonate CoA-transferase and is further referred to as the Malonly-CoA transferase pathway.  \n",
     "  \n",
     "The second option is a two step process, where malonyl-coa is split into malonate semialdehyde and co-enzym A while using NADPH through 3-oxopropanoate:NADP+ oxidoreductase (CoA-malonylating). Afterwards the same enzym as in the beta-alanine pathway is used to produce malonic acid. In order to force the model to work through this pathway, the enzym beta-alanine-oxoglutarate aminotransferase has to be shut down, which is described in the beta-alanine pathway as well. Because of the nature of the reactions it is called the Malony-Coa oxidored pathway.\n",
-    "##### Lactate\n",
+    "#### Lactate\n",
     "In order to produce malonic acid through lactate several enzyms have to be included. Initially lactate is transfered onto co-enzym A, followed by several hydratase steps leading up to 3Hydroxypropyionyl-CoA. From here it is fragmented into 3HP and CoA, where 3HP will be transformed to malonate semialdehyde and finally to malonic acid. The included enzyms are consecutively propionate CoA-transferase, lactoyl-CoA dehydratase, 3-Hydroxypropionyl-CoA hydro-lyase, 3-hydroxyisobutyryl-CoA hydrolase, 3-hydroxypropanoate:NAD+ oxidoreductase and finally and 3-hydroxypropionyl-CoA:NADP+ oxidoreductase.\n",
-    "##### Glycerol\n",
+    "#### Glycerol\n",
     "The glycerol route was dropped because it needs B12 as a cofactor, which is not natural in *K. phaffii*.  \n",
     "  \n",
     "The pathways are added using the script [create_pathway](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/create_pathway.ipynb). "
