reduce main part words Philipp

--- a/scripts/create_pathway.ipynb
+++ b/scripts/create_pathway.ipynb
@@ -36,11 +36,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7da27fd",
+   "metadata": {},
+   "source": [
+    "## General\n",
+    "Borodina et al. describe 4 different pathways to get to 3-hydroxy propionic acid with *Komatogaella phaffii*, where most of them go through malonic semialdehyde (Borodina 2014). This metabolite can serve as a precursor for both, malonic acid and 3-hydroxy propionic acid and therfore these pathways serve as a starting point for this cell factory project. The reactions, enzyms and corresponding metabolites were explored using the Kyoto Encyclopedia of Genes and Genomes KEGG (Kanehisa 2000, Kanehisa 2019, Kanehisa 2021). The described routes and the included are:\n",
+    "- Beta-Alanine\n",
+    "- Malonyl-CoA\n",
+    "- Lactate\n",
+    "- Glycerol\n",
+    "  \n",
+    "The pathways are established in the model by inserting one or several new enzyms and deleting competing ones that draw from the pathway.\n",
+    "\n",
+    "The glycerol route was dropped because it needs B12 as a cofactor, which is not natural in *K. phaffii*.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0dc57455",
    "metadata": {},
    "source": [
     "### Beta alanine pathway\n",
-    "The first step of the pathway, where mealonic semialdehyde gets produced from beta alanine, is alreayd present in the used model, so only the step to malonic acid has to be added."
+    "For this pathway two steps are necessary, first beta-alanine is changed to malonate semialdehyde by transferring its amino group onto alpha-ketoglutaric acid. For this reaction beta-alanine-oxoglutarate aminotransferase is need, which is already implemented in the used model.  \n",
+    "For the second step the enzym malonate-semialdehyde dehydrogenase is used, which hydrolises the malonate semialdehyde to malonic acid and uses NADP+ as a cofactor."
    ]
   },
   {
@@ -83,8 +101,9 @@
    "metadata": {},
    "source": [
     "### Malonyl-CoA route\n",
-    "There are two ways to Malonyl-CoA, one directly to malonic acid through a transferase reaction and the other by a Oxidoreductase reaction where malonly gets split into malonic semialdehyde and CoA while consuming NADPH. Here the first route is utalized, but can be switched manually to the second one.  \n",
-    "In case Option B is included, the reaction beta-alanine to malonic semialdehyde should be blocked, otherwise the simulation will result in the same rate as path 1."
+    "For malonyl-coa as a precursor, two pathways were identified and both are implemented. The first one directly switches the malonic acid group with an acetate molecule to create malonic acid and acetyl-coa. It uses Acetyl-CoA:malonate CoA-transferase and is further referred to as the Malonly-CoA transferase pathway.  \n",
+    "  \n",
+    "The second option is a two step process, where malonyl-coa is split into malonate semialdehyde and co-enzym A while using NADPH through 3-oxopropanoate:NADP+ oxidoreductase (CoA-malonylating). Afterwards the same enzym as in the beta-alanine pathway is used to produce malonic acid. In order to force the model to work through this pathway, the enzym beta-alanine-oxoglutarate aminotransferase has to be shut down, which is described in the beta-alanine pathway as well. Because of the nature of the reactions it is called the Malony-Coa oxidored pathway."
    ]
   },
   {
@@ -158,7 +177,7 @@
    "metadata": {},
    "source": [
     "### Lactate route\n",
-    "Through transferase onto CoenzymA and then hydratase steps up to 3Hydroxypropyionyl-CoA. Here either a further reaction to OxopropionylCoA and then to Malonyl-CoA would be possible or the dissiciation to 3HP and CoA, where 3HP will be transformed to malonate semialdehyde and finally to malonic acid. Here the later is shown and examined."
+    "In order to produce malonic acid through lactate several enzyms have to be included. Initially lactate is transfered onto co-enzym A, followed by several hydratase steps leading up to 3Hydroxypropyionyl-CoA. From here it is fragmented into 3HP and CoA, where 3HP will be transformed to malonate semialdehyde and finally to malonic acid. The included enzyms are consecutively propionate CoA-transferase, lactoyl-CoA dehydratase, 3-Hydroxypropionyl-CoA hydro-lyase, 3-hydroxyisobutyryl-CoA hydrolase, 3-hydroxypropanoate:NAD+ oxidoreductase and finally and 3-hydroxypropionyl-CoA:NADP+ oxidoreductase."
    ]
   },
   {
