Rewrite Problem Definition

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -108,14 +108,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of this project is to model and optimize a hypothetical _K. phaffii_ strain for the production of malonic acid. _K. phaffii_ does not natively produce malonic acid, thus the enzymes responsible for the missing metabolic steps need to be introduced in the strain. The genes will be integrated into the metabolic model **[placeholder model]**, previously described by **[placeholder author]**. The strain will be optimized for growth on methanol as a cheap substrate. Finally, as _K. phaffii_ has the tendency to invest resources into growth rather than production of secondary metabolites, through the knockout of competing, non-vital pathways we will try to optimize the metabolic flux towards the product, while maintaining growth rate at a reasonable level."
+    "The goal of this project is to model and optimize a hypothetical *K. phaffii* strain which uses methanol as a substrate for the production of malonic acid. This strain will help to work towards sustainability goals and a circular economy by utilizing a cheap substrate which is generally considered a by-product of fermentation, to produce a valuable product used in many different industries.\n",
+    "\n",
+    "Several genome-scale metabolic models described in literature, as well as models created from scratch are considered and compared based on completeness, mass balance and annotation. *K. phaffii* does not natively produce malonic acid, thus four different pathways producing malonic acid are manually added to the model and theoretical product yields are compared. Finally, as the organism has a tendency to invest resources into growth rather than production of secondary metabolites, several tools are used to attempt to couple biomass accumulation with malonic acid production and further optimize metabolic flux towards the product. A general strategy for the development of this cellfactory is presented, based on these analyses."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***118 words***"
+    "***170 words***"
    ]
   },
   {
@@ -887,7 +889,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -901,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
